deployment/k8s/weather_app_deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: weather-app-deployment

spec:
  selector:
    matchLabels:
      component: weather-app
  replicas: 3
  template:
    metadata:
      labels:
        component: weather-app
    spec:
      containers:
      - name: weather-app-container
        image: utsabdutta/weather-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
