deployment/k8s/weather_app_service.yaml
apiVersion: v1

kind: Service

metadata:
  name: weather-app-service

spec:
  selector:
    component: weather-app
  type: ClusterIP
  ports:
  - port: 5000
    targetPort: 80
